log

Thu 14 Mar 2024 08:23:32 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c6aa561
Thu 14 Mar 2024 08:27:14 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
6ba5955
Thu 14 Mar 2024 08:28:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
90f293e
Thu 14 Mar 2024 08:28:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
dfaa382
Thu 14 Mar 2024 08:29:59 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
9529475
Thu 14 Mar 2024 08:30:33 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 10/70
4c959a4
Thu 14 Mar 2024 08:31:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8814213
Thu 14 Mar 2024 08:35:28 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:44:7: error: array size missing in ‘arrayNuevo’
   44 |   int arrayNuevo[];
      |       ^~~~~~~~~~
exercises.c:48:17: error: array subscript is not an integer
   48 |       arrayNuevo[newSize] = arr[i];
      |                 ^
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrayNuevo;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
59c597b
Thu 14 Mar 2024 08:36:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:17: error: array subscript is not an integer
   48 |       arrayNuevo[newSize] = arr[i];
      |                 ^
Compilation failed
f50a37d
Thu 14 Mar 2024 08:37:47 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:17: error: array subscript is not an integer
   48 |       arrayNuevo[newSize] = arr[i];
      |                 ^
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrayNuevo;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
01d724f
Thu 14 Mar 2024 08:38:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:7: error: size of array ‘arrayNuevo’ has non-integer type
   45 |   int arrayNuevo[newSize];
      |       ^~~~~~~~~~
exercises.c:48:17: error: array subscript is not an integer
   48 |       arrayNuevo[newSize] = arr[i];
      |                 ^
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrayNuevo;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0f76629
Thu 14 Mar 2024 08:39:05 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:49:17: error: array subscript is not an integer
   49 |       arrayNuevo[newSize] = arr[i];
      |                 ^
Compilation failed
8791de5
Thu 14 Mar 2024 08:39:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
828b081
Thu 14 Mar 2024 08:39:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
665f2c6
Thu 14 Mar 2024 08:40:32 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
8edd776
Thu 14 Mar 2024 08:44:04 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2036efe
Thu 14 Mar 2024 08:45:32 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
5da9772
Thu 14 Mar 2024 08:49:46 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
95e5da7
Thu 14 Mar 2024 09:03:17 PM UTC: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:83:3: error: unknown type name ‘bool’
   83 |   bool desordenado;
      |   ^~~~
exercises.c:6:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    5 | #include <string.h>
  +++ |+#include <stdbool.h>
    6 | 
exercises.c:86:3: error: expected expression before ‘}’ token
   86 |   }
      |   ^
exercises.c:83:8: error: unused variable ‘desordenado’ [-Werror=unused-variable]
   83 |   bool desordenado;
      |        ^~~~~~~~~~~
exercises.c:90:1: error: no return statement in function returning non-void [-Werror=return-type]
   90 | }
      | ^
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7fa9cce
Thu 14 Mar 2024 09:04:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:83:3: error: unknown type name ‘bool’
   83 |   bool desordenado;
      |   ^~~~
exercises.c:6:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    5 | #include <string.h>
  +++ |+#include <stdbool.h>
    6 | 
exercises.c:86:3: error: expected expression before ‘}’ token
   86 |   }
      |   ^
exercises.c:83:8: error: unused variable ‘desordenado’ [-Werror=unused-variable]
   83 |   bool desordenado;
      |        ^~~~~~~~~~~
exercises.c:90:1: error: no return statement in function returning non-void [-Werror=return-type]
   90 | }
      | ^
exercises.c: In function ‘inicializarLibro’:
exercises.c:115:22: error: invalid type argument of ‘->’ (have ‘Autor’)
  115 |   strcpy(libro->autor->nombre, nombreAutor);
      |                      ^~
exercises.c:116:15: error: invalid type argument of ‘->’ (have ‘Autor’)
  116 |   libro->autor->anioNacimiento = anioNacimiento;
      |               ^~
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cea33c7
